syntaxAnalyser.output
Terminais sem uso na gramática

    SEPARADOR


Estado 38 conflitos: 2 de deslocamento/redução


Gramática

    0 $accept: programa $end

    1 programa: declaracoes

    2 declaracoes: declaracoes declaracao
    3            | declaracao

    4 declaracao: var_decl
    5           | TUPLE declaracao_tupla
    6           | func_decl

    7 declaracao_tupla: TIPO ID ',' declaracao_tupla
    8                 | TIPO ID ID ';'
    9                 | ID

   10 var_decl: TIPO ID ';'

   11 $@1: %empty

   12 $@2: %empty

   13 func_decl: TIPO ID '(' $@1 parm_tipos ')' $@2 '{' cod_blocks '}'

   14 $@3: %empty

   15 func_decl: TIPO ID '(' ')' '{' $@3 cod_blocks '}'

   16 parm_tipos: parm_tipos TIPO ID
   17           | parm_tipos TIPO ID '[' ']'
   18           | TIPO ID ','
   19           | TIPO ID
   20           | TIPO ID '[' ']'
   21           | TUPLE ID

   22 cod_blocks: cod_blocks cod_block
   23           | cod_block

   24 cod_block: IF '(' expressao_logica ')' '{' cod_blocks '}'
   25          | IF '(' expressao_logica ')' '{' cod_blocks '}' ELSE '{' cod_blocks '}'
   26          | LACOS '(' expressao_logica ')' '{' cod_block '}'
   27          | RETORNO ';'
   28          | RETORNO termo ';'
   29          | RETORNO '(' expressao ')' ';'
   30          | assign ';'
   31          | print
   32          | func_call
   33          | scan '(' variable ')' ';'
   34          | declaracoes

   35 assign: variable OP_ASSIGN expressao
   36       | variable '[' INT ']' OP_ASSIGN expressao

   37 expressao: '(' expressao ')'
   38          | op_expressao
   39          | func_call

   40 expressao_logica: OP_LOG op_expressao
   41                 | '!' op_expressao
   42                 | op_expressao OP_COMP op_expressao
   43                 | '(' op_expressao ')'
   44                 | op_expressao
   45                 | BOOL

   46 op_expressao: op_expressao OP_ARITM termo
   47             | termo
   48             | op_expressao ',' termo

   49 termo: variable
   50      | INT
   51      | FLOAT
   52      | variable '[' INT ']'
   53      | palavra

   54 scan: SCAN '(' variable ')'

   55 print: PRINT '(' termo ')' ';'

   56 func_call: ID '(' func_args ')'

   57 func_args: func_args ',' func_arg
   58          | func_arg

   59 func_arg: ID
   60         | ID '[' ID ']'
   61         | INT
   62         | FLOAT
   63         | palavra
   64         | %empty

   65 palavra: palavra LETRA
   66        | palavra DIGITO
   67        | LETRA
   68        | DIGITO

   69 variable: ID
   70         | ID PONTO ID


Terminais, com as regras onde eles aparecem

    $end (0) 0
    '!' (33) 41
    '(' (40) 13 15 24 25 26 29 33 37 43 54 55 56
    ')' (41) 13 15 24 25 26 29 33 37 43 54 55 56
    ',' (44) 7 18 48 57
    ';' (59) 8 10 27 28 29 30 33 55
    '[' (91) 17 20 36 52 60
    ']' (93) 17 20 36 52 60
    '{' (123) 13 15 24 25 26
    '}' (125) 13 15 24 25 26
    error (256)
    BOOL (258) 45
    TIPO <tipo> (259) 7 8 10 13 15 16 17 18 19 20
    IF <str> (260) 24 25
    ELSE <str> (261) 25
    LACOS (262) 26
    RETORNO <str> (263) 27 28 29
    INT <str> (264) 36 50 52 61
    FLOAT <str> (265) 51 62
    TUPLE <str> (266) 5 21
    ID <id> (267) 7 8 9 10 13 15 16 17 18 19 20 21 56 59 60 69 70
    DIGITO <str> (268) 66 68
    LETRA <str> (269) 65 67
    SEPARADOR (270)
    PONTO (271) 70
    PRINT (272) 55
    SCAN (273) 54
    OP_ASSIGN <operador> (274) 35 36
    OP_ARITM <operador> (275) 46
    OP_LOG <operador> (276) 40
    OP_COMP <operador> (277) 42


Não terminais com as regras onde eles aparecem

    $accept (32)
        à esquerda: 0
    programa <nd> (33)
        à esquerda: 1
        à direita: 0
    declaracoes <nd> (34)
        à esquerda: 2 3
        à direita: 1 2 34
    declaracao <nd> (35)
        à esquerda: 4 5 6
        à direita: 2 3
    declaracao_tupla <nd> (36)
        à esquerda: 7 8 9
        à direita: 5 7
    var_decl <nd> (37)
        à esquerda: 10
        à direita: 4
    func_decl <nd> (38)
        à esquerda: 13 15
        à direita: 6
    $@1 (39)
        à esquerda: 11
        à direita: 13
    $@2 (40)
        à esquerda: 12
        à direita: 13
    $@3 (41)
        à esquerda: 14
        à direita: 15
    parm_tipos <nd> (42)
        à esquerda: 16 17 18 19 20 21
        à direita: 13 16 17
    cod_blocks <nd> (43)
        à esquerda: 22 23
        à direita: 13 15 22 24 25
    cod_block <nd> (44)
        à esquerda: 24 25 26 27 28 29 30 31 32 33 34
        à direita: 22 23 26
    assign <nd> (45)
        à esquerda: 35 36
        à direita: 30
    expressao <nd> (46)
        à esquerda: 37 38 39
        à direita: 29 35 36 37
    expressao_logica <nd> (47)
        à esquerda: 40 41 42 43 44 45
        à direita: 24 25 26
    op_expressao <nd> (48)
        à esquerda: 46 47 48
        à direita: 38 40 41 42 43 44 46 48
    termo <nd> (49)
        à esquerda: 49 50 51 52 53
        à direita: 28 46 47 48 55
    scan <nd> (50)
        à esquerda: 54
        à direita: 33
    print <nd> (51)
        à esquerda: 55
        à direita: 31
    func_call <nd> (52)
        à esquerda: 56
        à direita: 32 39
    func_args <nd> (53)
        à esquerda: 57 58
        à direita: 56 57
    func_arg <nd> (54)
        à esquerda: 59 60 61 62 63 64
        à direita: 57 58
    palavra <str> (55)
        à esquerda: 65 66 67 68
        à direita: 53 63 65 66
    variable <str> (56)
        à esquerda: 69 70
        à direita: 33 35 36 49 52 54


Estado 0

    0 $accept: • programa $end

    TIPO   deslocar, e ir ao estado 1
    TUPLE  deslocar, e ir ao estado 2

    programa     ir ao estado 3
    declaracoes  ir ao estado 4
    declaracao   ir ao estado 5
    var_decl     ir ao estado 6
    func_decl    ir ao estado 7


Estado 1

   10 var_decl: TIPO • ID ';'
   13 func_decl: TIPO • ID '(' $@1 parm_tipos ')' $@2 '{' cod_blocks '}'
   15          | TIPO • ID '(' ')' '{' $@3 cod_blocks '}'

    ID  deslocar, e ir ao estado 8


Estado 2

    5 declaracao: TUPLE • declaracao_tupla

    TIPO  deslocar, e ir ao estado 9
    ID    deslocar, e ir ao estado 10

    declaracao_tupla  ir ao estado 11


Estado 3

    0 $accept: programa • $end

    $end  deslocar, e ir ao estado 12


Estado 4

    1 programa: declaracoes •
    2 declaracoes: declaracoes • declaracao

    TIPO   deslocar, e ir ao estado 1
    TUPLE  deslocar, e ir ao estado 2

    $padrão  reduzir usando a regra 1 (programa)

    declaracao  ir ao estado 13
    var_decl    ir ao estado 6
    func_decl   ir ao estado 7


Estado 5

    3 declaracoes: declaracao •

    $padrão  reduzir usando a regra 3 (declaracoes)


Estado 6

    4 declaracao: var_decl •

    $padrão  reduzir usando a regra 4 (declaracao)


Estado 7

    6 declaracao: func_decl •

    $padrão  reduzir usando a regra 6 (declaracao)


Estado 8

   10 var_decl: TIPO ID • ';'
   13 func_decl: TIPO ID • '(' $@1 parm_tipos ')' $@2 '{' cod_blocks '}'
   15          | TIPO ID • '(' ')' '{' $@3 cod_blocks '}'

    ';'  deslocar, e ir ao estado 14
    '('  deslocar, e ir ao estado 15


Estado 9

    7 declaracao_tupla: TIPO • ID ',' declaracao_tupla
    8                 | TIPO • ID ID ';'

    ID  deslocar, e ir ao estado 16


Estado 10

    9 declaracao_tupla: ID •

    $padrão  reduzir usando a regra 9 (declaracao_tupla)


Estado 11

    5 declaracao: TUPLE declaracao_tupla •

    $padrão  reduzir usando a regra 5 (declaracao)


Estado 12

    0 $accept: programa $end •

    $padrão  aceitar


Estado 13

    2 declaracoes: declaracoes declaracao •

    $padrão  reduzir usando a regra 2 (declaracoes)


Estado 14

   10 var_decl: TIPO ID ';' •

    $padrão  reduzir usando a regra 10 (var_decl)


Estado 15

   13 func_decl: TIPO ID '(' • $@1 parm_tipos ')' $@2 '{' cod_blocks '}'
   15          | TIPO ID '(' • ')' '{' $@3 cod_blocks '}'

    ')'  deslocar, e ir ao estado 17

    $padrão  reduzir usando a regra 11 ($@1)

    $@1  ir ao estado 18


Estado 16

    7 declaracao_tupla: TIPO ID • ',' declaracao_tupla
    8                 | TIPO ID • ID ';'

    ID   deslocar, e ir ao estado 19
    ','  deslocar, e ir ao estado 20


Estado 17

   15 func_decl: TIPO ID '(' ')' • '{' $@3 cod_blocks '}'

    '{'  deslocar, e ir ao estado 21


Estado 18

   13 func_decl: TIPO ID '(' $@1 • parm_tipos ')' $@2 '{' cod_blocks '}'

    TIPO   deslocar, e ir ao estado 22
    TUPLE  deslocar, e ir ao estado 23

    parm_tipos  ir ao estado 24


Estado 19

    8 declaracao_tupla: TIPO ID ID • ';'

    ';'  deslocar, e ir ao estado 25


Estado 20

    7 declaracao_tupla: TIPO ID ',' • declaracao_tupla

    TIPO  deslocar, e ir ao estado 9
    ID    deslocar, e ir ao estado 10

    declaracao_tupla  ir ao estado 26


Estado 21

   15 func_decl: TIPO ID '(' ')' '{' • $@3 cod_blocks '}'

    $padrão  reduzir usando a regra 14 ($@3)

    $@3  ir ao estado 27


Estado 22

   18 parm_tipos: TIPO • ID ','
   19           | TIPO • ID
   20           | TIPO • ID '[' ']'

    ID  deslocar, e ir ao estado 28


Estado 23

   21 parm_tipos: TUPLE • ID

    ID  deslocar, e ir ao estado 29


Estado 24

   13 func_decl: TIPO ID '(' $@1 parm_tipos • ')' $@2 '{' cod_blocks '}'
   16 parm_tipos: parm_tipos • TIPO ID
   17           | parm_tipos • TIPO ID '[' ']'

    TIPO  deslocar, e ir ao estado 30
    ')'   deslocar, e ir ao estado 31


Estado 25

    8 declaracao_tupla: TIPO ID ID ';' •

    $padrão  reduzir usando a regra 8 (declaracao_tupla)


Estado 26

    7 declaracao_tupla: TIPO ID ',' declaracao_tupla •

    $padrão  reduzir usando a regra 7 (declaracao_tupla)


Estado 27

   15 func_decl: TIPO ID '(' ')' '{' $@3 • cod_blocks '}'

    TIPO     deslocar, e ir ao estado 1
    IF       deslocar, e ir ao estado 32
    LACOS    deslocar, e ir ao estado 33
    RETORNO  deslocar, e ir ao estado 34
    TUPLE    deslocar, e ir ao estado 2
    ID       deslocar, e ir ao estado 35
    PRINT    deslocar, e ir ao estado 36
    SCAN     deslocar, e ir ao estado 37

    declaracoes  ir ao estado 38
    declaracao   ir ao estado 5
    var_decl     ir ao estado 6
    func_decl    ir ao estado 7
    cod_blocks   ir ao estado 39
    cod_block    ir ao estado 40
    assign       ir ao estado 41
    scan         ir ao estado 42
    print        ir ao estado 43
    func_call    ir ao estado 44
    variable     ir ao estado 45


Estado 28

   18 parm_tipos: TIPO ID • ','
   19           | TIPO ID •
   20           | TIPO ID • '[' ']'

    ','  deslocar, e ir ao estado 46
    '['  deslocar, e ir ao estado 47

    $padrão  reduzir usando a regra 19 (parm_tipos)


Estado 29

   21 parm_tipos: TUPLE ID •

    $padrão  reduzir usando a regra 21 (parm_tipos)


Estado 30

   16 parm_tipos: parm_tipos TIPO • ID
   17           | parm_tipos TIPO • ID '[' ']'

    ID  deslocar, e ir ao estado 48


Estado 31

   13 func_decl: TIPO ID '(' $@1 parm_tipos ')' • $@2 '{' cod_blocks '}'

    $padrão  reduzir usando a regra 12 ($@2)

    $@2  ir ao estado 49


Estado 32

   24 cod_block: IF • '(' expressao_logica ')' '{' cod_blocks '}'
   25          | IF • '(' expressao_logica ')' '{' cod_blocks '}' ELSE '{' cod_blocks '}'

    '('  deslocar, e ir ao estado 50


Estado 33

   26 cod_block: LACOS • '(' expressao_logica ')' '{' cod_block '}'

    '('  deslocar, e ir ao estado 51


Estado 34

   27 cod_block: RETORNO • ';'
   28          | RETORNO • termo ';'
   29          | RETORNO • '(' expressao ')' ';'

    INT     deslocar, e ir ao estado 52
    FLOAT   deslocar, e ir ao estado 53
    ID      deslocar, e ir ao estado 54
    DIGITO  deslocar, e ir ao estado 55
    LETRA   deslocar, e ir ao estado 56
    ';'     deslocar, e ir ao estado 57
    '('     deslocar, e ir ao estado 58

    termo     ir ao estado 59
    palavra   ir ao estado 60
    variable  ir ao estado 61


Estado 35

   56 func_call: ID • '(' func_args ')'
   69 variable: ID •
   70         | ID • PONTO ID

    PONTO  deslocar, e ir ao estado 62
    '('    deslocar, e ir ao estado 63

    $padrão  reduzir usando a regra 69 (variable)


Estado 36

   55 print: PRINT • '(' termo ')' ';'

    '('  deslocar, e ir ao estado 64


Estado 37

   54 scan: SCAN • '(' variable ')'

    '('  deslocar, e ir ao estado 65


Estado 38

    2 declaracoes: declaracoes • declaracao
   34 cod_block: declaracoes •

    TIPO   deslocar, e ir ao estado 1
    TUPLE  deslocar, e ir ao estado 2

    TIPO     [reduzir usando a regra 34 (cod_block)]
    TUPLE    [reduzir usando a regra 34 (cod_block)]
    $padrão  reduzir usando a regra 34 (cod_block)

    declaracao  ir ao estado 13
    var_decl    ir ao estado 6
    func_decl   ir ao estado 7


Estado 39

   15 func_decl: TIPO ID '(' ')' '{' $@3 cod_blocks • '}'
   22 cod_blocks: cod_blocks • cod_block

    TIPO     deslocar, e ir ao estado 1
    IF       deslocar, e ir ao estado 32
    LACOS    deslocar, e ir ao estado 33
    RETORNO  deslocar, e ir ao estado 34
    TUPLE    deslocar, e ir ao estado 2
    ID       deslocar, e ir ao estado 35
    PRINT    deslocar, e ir ao estado 36
    SCAN     deslocar, e ir ao estado 37
    '}'      deslocar, e ir ao estado 66

    declaracoes  ir ao estado 38
    declaracao   ir ao estado 5
    var_decl     ir ao estado 6
    func_decl    ir ao estado 7
    cod_block    ir ao estado 67
    assign       ir ao estado 41
    scan         ir ao estado 42
    print        ir ao estado 43
    func_call    ir ao estado 44
    variable     ir ao estado 45


Estado 40

   23 cod_blocks: cod_block •

    $padrão  reduzir usando a regra 23 (cod_blocks)


Estado 41

   30 cod_block: assign • ';'

    ';'  deslocar, e ir ao estado 68


Estado 42

   33 cod_block: scan • '(' variable ')' ';'

    '('  deslocar, e ir ao estado 69


Estado 43

   31 cod_block: print •

    $padrão  reduzir usando a regra 31 (cod_block)


Estado 44

   32 cod_block: func_call •

    $padrão  reduzir usando a regra 32 (cod_block)


Estado 45

   35 assign: variable • OP_ASSIGN expressao
   36       | variable • '[' INT ']' OP_ASSIGN expressao

    OP_ASSIGN  deslocar, e ir ao estado 70
    '['        deslocar, e ir ao estado 71


Estado 46

   18 parm_tipos: TIPO ID ',' •

    $padrão  reduzir usando a regra 18 (parm_tipos)


Estado 47

   20 parm_tipos: TIPO ID '[' • ']'

    ']'  deslocar, e ir ao estado 72


Estado 48

   16 parm_tipos: parm_tipos TIPO ID •
   17           | parm_tipos TIPO ID • '[' ']'

    '['  deslocar, e ir ao estado 73

    $padrão  reduzir usando a regra 16 (parm_tipos)


Estado 49

   13 func_decl: TIPO ID '(' $@1 parm_tipos ')' $@2 • '{' cod_blocks '}'

    '{'  deslocar, e ir ao estado 74


Estado 50

   24 cod_block: IF '(' • expressao_logica ')' '{' cod_blocks '}'
   25          | IF '(' • expressao_logica ')' '{' cod_blocks '}' ELSE '{' cod_blocks '}'

    BOOL    deslocar, e ir ao estado 75
    INT     deslocar, e ir ao estado 52
    FLOAT   deslocar, e ir ao estado 53
    ID      deslocar, e ir ao estado 54
    DIGITO  deslocar, e ir ao estado 55
    LETRA   deslocar, e ir ao estado 56
    OP_LOG  deslocar, e ir ao estado 76
    '('     deslocar, e ir ao estado 77
    '!'     deslocar, e ir ao estado 78

    expressao_logica  ir ao estado 79
    op_expressao      ir ao estado 80
    termo             ir ao estado 81
    palavra           ir ao estado 60
    variable          ir ao estado 61


Estado 51

   26 cod_block: LACOS '(' • expressao_logica ')' '{' cod_block '}'

    BOOL    deslocar, e ir ao estado 75
    INT     deslocar, e ir ao estado 52
    FLOAT   deslocar, e ir ao estado 53
    ID      deslocar, e ir ao estado 54
    DIGITO  deslocar, e ir ao estado 55
    LETRA   deslocar, e ir ao estado 56
    OP_LOG  deslocar, e ir ao estado 76
    '('     deslocar, e ir ao estado 77
    '!'     deslocar, e ir ao estado 78

    expressao_logica  ir ao estado 82
    op_expressao      ir ao estado 80
    termo             ir ao estado 81
    palavra           ir ao estado 60
    variable          ir ao estado 61


Estado 52

   50 termo: INT •

    $padrão  reduzir usando a regra 50 (termo)


Estado 53

   51 termo: FLOAT •

    $padrão  reduzir usando a regra 51 (termo)


Estado 54

   69 variable: ID •
   70         | ID • PONTO ID

    PONTO  deslocar, e ir ao estado 62

    $padrão  reduzir usando a regra 69 (variable)


Estado 55

   68 palavra: DIGITO •

    $padrão  reduzir usando a regra 68 (palavra)


Estado 56

   67 palavra: LETRA •

    $padrão  reduzir usando a regra 67 (palavra)


Estado 57

   27 cod_block: RETORNO ';' •

    $padrão  reduzir usando a regra 27 (cod_block)


Estado 58

   29 cod_block: RETORNO '(' • expressao ')' ';'

    INT     deslocar, e ir ao estado 52
    FLOAT   deslocar, e ir ao estado 53
    ID      deslocar, e ir ao estado 35
    DIGITO  deslocar, e ir ao estado 55
    LETRA   deslocar, e ir ao estado 56
    '('     deslocar, e ir ao estado 83

    expressao     ir ao estado 84
    op_expressao  ir ao estado 85
    termo         ir ao estado 81
    func_call     ir ao estado 86
    palavra       ir ao estado 60
    variable      ir ao estado 61


Estado 59

   28 cod_block: RETORNO termo • ';'

    ';'  deslocar, e ir ao estado 87


Estado 60

   53 termo: palavra •
   65 palavra: palavra • LETRA
   66        | palavra • DIGITO

    DIGITO  deslocar, e ir ao estado 88
    LETRA   deslocar, e ir ao estado 89

    $padrão  reduzir usando a regra 53 (termo)


Estado 61

   49 termo: variable •
   52      | variable • '[' INT ']'

    '['  deslocar, e ir ao estado 90

    $padrão  reduzir usando a regra 49 (termo)


Estado 62

   70 variable: ID PONTO • ID

    ID  deslocar, e ir ao estado 91


Estado 63

   56 func_call: ID '(' • func_args ')'

    INT     deslocar, e ir ao estado 92
    FLOAT   deslocar, e ir ao estado 93
    ID      deslocar, e ir ao estado 94
    DIGITO  deslocar, e ir ao estado 55
    LETRA   deslocar, e ir ao estado 56

    $padrão  reduzir usando a regra 64 (func_arg)

    func_args  ir ao estado 95
    func_arg   ir ao estado 96
    palavra    ir ao estado 97


Estado 64

   55 print: PRINT '(' • termo ')' ';'

    INT     deslocar, e ir ao estado 52
    FLOAT   deslocar, e ir ao estado 53
    ID      deslocar, e ir ao estado 54
    DIGITO  deslocar, e ir ao estado 55
    LETRA   deslocar, e ir ao estado 56

    termo     ir ao estado 98
    palavra   ir ao estado 60
    variable  ir ao estado 61


Estado 65

   54 scan: SCAN '(' • variable ')'

    ID  deslocar, e ir ao estado 54

    variable  ir ao estado 99


Estado 66

   15 func_decl: TIPO ID '(' ')' '{' $@3 cod_blocks '}' •

    $padrão  reduzir usando a regra 15 (func_decl)


Estado 67

   22 cod_blocks: cod_blocks cod_block •

    $padrão  reduzir usando a regra 22 (cod_blocks)


Estado 68

   30 cod_block: assign ';' •

    $padrão  reduzir usando a regra 30 (cod_block)


Estado 69

   33 cod_block: scan '(' • variable ')' ';'

    ID  deslocar, e ir ao estado 54

    variable  ir ao estado 100


Estado 70

   35 assign: variable OP_ASSIGN • expressao

    INT     deslocar, e ir ao estado 52
    FLOAT   deslocar, e ir ao estado 53
    ID      deslocar, e ir ao estado 35
    DIGITO  deslocar, e ir ao estado 55
    LETRA   deslocar, e ir ao estado 56
    '('     deslocar, e ir ao estado 83

    expressao     ir ao estado 101
    op_expressao  ir ao estado 85
    termo         ir ao estado 81
    func_call     ir ao estado 86
    palavra       ir ao estado 60
    variable      ir ao estado 61


Estado 71

   36 assign: variable '[' • INT ']' OP_ASSIGN expressao

    INT  deslocar, e ir ao estado 102


Estado 72

   20 parm_tipos: TIPO ID '[' ']' •

    $padrão  reduzir usando a regra 20 (parm_tipos)


Estado 73

   17 parm_tipos: parm_tipos TIPO ID '[' • ']'

    ']'  deslocar, e ir ao estado 103


Estado 74

   13 func_decl: TIPO ID '(' $@1 parm_tipos ')' $@2 '{' • cod_blocks '}'

    TIPO     deslocar, e ir ao estado 1
    IF       deslocar, e ir ao estado 32
    LACOS    deslocar, e ir ao estado 33
    RETORNO  deslocar, e ir ao estado 34
    TUPLE    deslocar, e ir ao estado 2
    ID       deslocar, e ir ao estado 35
    PRINT    deslocar, e ir ao estado 36
    SCAN     deslocar, e ir ao estado 37

    declaracoes  ir ao estado 38
    declaracao   ir ao estado 5
    var_decl     ir ao estado 6
    func_decl    ir ao estado 7
    cod_blocks   ir ao estado 104
    cod_block    ir ao estado 40
    assign       ir ao estado 41
    scan         ir ao estado 42
    print        ir ao estado 43
    func_call    ir ao estado 44
    variable     ir ao estado 45


Estado 75

   45 expressao_logica: BOOL •

    $padrão  reduzir usando a regra 45 (expressao_logica)


Estado 76

   40 expressao_logica: OP_LOG • op_expressao

    INT     deslocar, e ir ao estado 52
    FLOAT   deslocar, e ir ao estado 53
    ID      deslocar, e ir ao estado 54
    DIGITO  deslocar, e ir ao estado 55
    LETRA   deslocar, e ir ao estado 56

    op_expressao  ir ao estado 105
    termo         ir ao estado 81
    palavra       ir ao estado 60
    variable      ir ao estado 61


Estado 77

   43 expressao_logica: '(' • op_expressao ')'

    INT     deslocar, e ir ao estado 52
    FLOAT   deslocar, e ir ao estado 53
    ID      deslocar, e ir ao estado 54
    DIGITO  deslocar, e ir ao estado 55
    LETRA   deslocar, e ir ao estado 56

    op_expressao  ir ao estado 106
    termo         ir ao estado 81
    palavra       ir ao estado 60
    variable      ir ao estado 61


Estado 78

   41 expressao_logica: '!' • op_expressao

    INT     deslocar, e ir ao estado 52
    FLOAT   deslocar, e ir ao estado 53
    ID      deslocar, e ir ao estado 54
    DIGITO  deslocar, e ir ao estado 55
    LETRA   deslocar, e ir ao estado 56

    op_expressao  ir ao estado 107
    termo         ir ao estado 81
    palavra       ir ao estado 60
    variable      ir ao estado 61


Estado 79

   24 cod_block: IF '(' expressao_logica • ')' '{' cod_blocks '}'
   25          | IF '(' expressao_logica • ')' '{' cod_blocks '}' ELSE '{' cod_blocks '}'

    ')'  deslocar, e ir ao estado 108


Estado 80

   42 expressao_logica: op_expressao • OP_COMP op_expressao
   44                 | op_expressao •
   46 op_expressao: op_expressao • OP_ARITM termo
   48             | op_expressao • ',' termo

    OP_ARITM  deslocar, e ir ao estado 109
    OP_COMP   deslocar, e ir ao estado 110
    ','       deslocar, e ir ao estado 111

    $padrão  reduzir usando a regra 44 (expressao_logica)


Estado 81

   47 op_expressao: termo •

    $padrão  reduzir usando a regra 47 (op_expressao)


Estado 82

   26 cod_block: LACOS '(' expressao_logica • ')' '{' cod_block '}'

    ')'  deslocar, e ir ao estado 112


Estado 83

   37 expressao: '(' • expressao ')'

    INT     deslocar, e ir ao estado 52
    FLOAT   deslocar, e ir ao estado 53
    ID      deslocar, e ir ao estado 35
    DIGITO  deslocar, e ir ao estado 55
    LETRA   deslocar, e ir ao estado 56
    '('     deslocar, e ir ao estado 83

    expressao     ir ao estado 113
    op_expressao  ir ao estado 85
    termo         ir ao estado 81
    func_call     ir ao estado 86
    palavra       ir ao estado 60
    variable      ir ao estado 61


Estado 84

   29 cod_block: RETORNO '(' expressao • ')' ';'

    ')'  deslocar, e ir ao estado 114


Estado 85

   38 expressao: op_expressao •
   46 op_expressao: op_expressao • OP_ARITM termo
   48             | op_expressao • ',' termo

    OP_ARITM  deslocar, e ir ao estado 109
    ','       deslocar, e ir ao estado 111

    $padrão  reduzir usando a regra 38 (expressao)


Estado 86

   39 expressao: func_call •

    $padrão  reduzir usando a regra 39 (expressao)


Estado 87

   28 cod_block: RETORNO termo ';' •

    $padrão  reduzir usando a regra 28 (cod_block)


Estado 88

   66 palavra: palavra DIGITO •

    $padrão  reduzir usando a regra 66 (palavra)


Estado 89

   65 palavra: palavra LETRA •

    $padrão  reduzir usando a regra 65 (palavra)


Estado 90

   52 termo: variable '[' • INT ']'

    INT  deslocar, e ir ao estado 115


Estado 91

   70 variable: ID PONTO ID •

    $padrão  reduzir usando a regra 70 (variable)


Estado 92

   61 func_arg: INT •

    $padrão  reduzir usando a regra 61 (func_arg)


Estado 93

   62 func_arg: FLOAT •

    $padrão  reduzir usando a regra 62 (func_arg)


Estado 94

   59 func_arg: ID •
   60         | ID • '[' ID ']'

    '['  deslocar, e ir ao estado 116

    $padrão  reduzir usando a regra 59 (func_arg)


Estado 95

   56 func_call: ID '(' func_args • ')'
   57 func_args: func_args • ',' func_arg

    ','  deslocar, e ir ao estado 117
    ')'  deslocar, e ir ao estado 118


Estado 96

   58 func_args: func_arg •

    $padrão  reduzir usando a regra 58 (func_args)


Estado 97

   63 func_arg: palavra •
   65 palavra: palavra • LETRA
   66        | palavra • DIGITO

    DIGITO  deslocar, e ir ao estado 88
    LETRA   deslocar, e ir ao estado 89

    $padrão  reduzir usando a regra 63 (func_arg)


Estado 98

   55 print: PRINT '(' termo • ')' ';'

    ')'  deslocar, e ir ao estado 119


Estado 99

   54 scan: SCAN '(' variable • ')'

    ')'  deslocar, e ir ao estado 120


Estado 100

   33 cod_block: scan '(' variable • ')' ';'

    ')'  deslocar, e ir ao estado 121


Estado 101

   35 assign: variable OP_ASSIGN expressao •

    $padrão  reduzir usando a regra 35 (assign)


Estado 102

   36 assign: variable '[' INT • ']' OP_ASSIGN expressao

    ']'  deslocar, e ir ao estado 122


Estado 103

   17 parm_tipos: parm_tipos TIPO ID '[' ']' •

    $padrão  reduzir usando a regra 17 (parm_tipos)


Estado 104

   13 func_decl: TIPO ID '(' $@1 parm_tipos ')' $@2 '{' cod_blocks • '}'
   22 cod_blocks: cod_blocks • cod_block

    TIPO     deslocar, e ir ao estado 1
    IF       deslocar, e ir ao estado 32
    LACOS    deslocar, e ir ao estado 33
    RETORNO  deslocar, e ir ao estado 34
    TUPLE    deslocar, e ir ao estado 2
    ID       deslocar, e ir ao estado 35
    PRINT    deslocar, e ir ao estado 36
    SCAN     deslocar, e ir ao estado 37
    '}'      deslocar, e ir ao estado 123

    declaracoes  ir ao estado 38
    declaracao   ir ao estado 5
    var_decl     ir ao estado 6
    func_decl    ir ao estado 7
    cod_block    ir ao estado 67
    assign       ir ao estado 41
    scan         ir ao estado 42
    print        ir ao estado 43
    func_call    ir ao estado 44
    variable     ir ao estado 45


Estado 105

   40 expressao_logica: OP_LOG op_expressao •
   46 op_expressao: op_expressao • OP_ARITM termo
   48             | op_expressao • ',' termo

    OP_ARITM  deslocar, e ir ao estado 109
    ','       deslocar, e ir ao estado 111

    $padrão  reduzir usando a regra 40 (expressao_logica)


Estado 106

   43 expressao_logica: '(' op_expressao • ')'
   46 op_expressao: op_expressao • OP_ARITM termo
   48             | op_expressao • ',' termo

    OP_ARITM  deslocar, e ir ao estado 109
    ','       deslocar, e ir ao estado 111
    ')'       deslocar, e ir ao estado 124


Estado 107

   41 expressao_logica: '!' op_expressao •
   46 op_expressao: op_expressao • OP_ARITM termo
   48             | op_expressao • ',' termo

    OP_ARITM  deslocar, e ir ao estado 109
    ','       deslocar, e ir ao estado 111

    $padrão  reduzir usando a regra 41 (expressao_logica)


Estado 108

   24 cod_block: IF '(' expressao_logica ')' • '{' cod_blocks '}'
   25          | IF '(' expressao_logica ')' • '{' cod_blocks '}' ELSE '{' cod_blocks '}'

    '{'  deslocar, e ir ao estado 125


Estado 109

   46 op_expressao: op_expressao OP_ARITM • termo

    INT     deslocar, e ir ao estado 52
    FLOAT   deslocar, e ir ao estado 53
    ID      deslocar, e ir ao estado 54
    DIGITO  deslocar, e ir ao estado 55
    LETRA   deslocar, e ir ao estado 56

    termo     ir ao estado 126
    palavra   ir ao estado 60
    variable  ir ao estado 61


Estado 110

   42 expressao_logica: op_expressao OP_COMP • op_expressao

    INT     deslocar, e ir ao estado 52
    FLOAT   deslocar, e ir ao estado 53
    ID      deslocar, e ir ao estado 54
    DIGITO  deslocar, e ir ao estado 55
    LETRA   deslocar, e ir ao estado 56

    op_expressao  ir ao estado 127
    termo         ir ao estado 81
    palavra       ir ao estado 60
    variable      ir ao estado 61


Estado 111

   48 op_expressao: op_expressao ',' • termo

    INT     deslocar, e ir ao estado 52
    FLOAT   deslocar, e ir ao estado 53
    ID      deslocar, e ir ao estado 54
    DIGITO  deslocar, e ir ao estado 55
    LETRA   deslocar, e ir ao estado 56

    termo     ir ao estado 128
    palavra   ir ao estado 60
    variable  ir ao estado 61


Estado 112

   26 cod_block: LACOS '(' expressao_logica ')' • '{' cod_block '}'

    '{'  deslocar, e ir ao estado 129


Estado 113

   37 expressao: '(' expressao • ')'

    ')'  deslocar, e ir ao estado 130


Estado 114

   29 cod_block: RETORNO '(' expressao ')' • ';'

    ';'  deslocar, e ir ao estado 131


Estado 115

   52 termo: variable '[' INT • ']'

    ']'  deslocar, e ir ao estado 132


Estado 116

   60 func_arg: ID '[' • ID ']'

    ID  deslocar, e ir ao estado 133


Estado 117

   57 func_args: func_args ',' • func_arg

    INT     deslocar, e ir ao estado 92
    FLOAT   deslocar, e ir ao estado 93
    ID      deslocar, e ir ao estado 94
    DIGITO  deslocar, e ir ao estado 55
    LETRA   deslocar, e ir ao estado 56

    $padrão  reduzir usando a regra 64 (func_arg)

    func_arg  ir ao estado 134
    palavra   ir ao estado 97


Estado 118

   56 func_call: ID '(' func_args ')' •

    $padrão  reduzir usando a regra 56 (func_call)


Estado 119

   55 print: PRINT '(' termo ')' • ';'

    ';'  deslocar, e ir ao estado 135


Estado 120

   54 scan: SCAN '(' variable ')' •

    $padrão  reduzir usando a regra 54 (scan)


Estado 121

   33 cod_block: scan '(' variable ')' • ';'
